# ip-over-serial

./: Cargo.toml  LICENSE  README.md
serial/: Cargo.toml
serial/src/: detect.rs  frame.rs  lib.rs
serial_frame_generator/: Cargo.toml
serial_frame_generator/src/: main.rs
serial_frame_listener/: Cargo.toml
serial_frame_listener/src/: main.rs
serial_listener/: Cargo.toml
serial_listener/src/: main.rs
