[package]
name = "serial_frame_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serial = { path = "../serial" }
tokio = { version = "1.27.0", features = ["full"] }
tracing-subscriber = "0.3.16"
tokio-util = { version = "0.7.7", features = ["full"] }
futures-util = "0.3.28"
